- Refactor transportation modes template to streamline empty state and improve content rendering - Update HTML templates to use `body` target with `outerHTML` swap for dynamic updates - Replace deprecated `Collectors.toList()` with `toList()` - Fix `isAdmin` attribute assignment in `TransportationModesController` - Add internationalization keys for transportation modes settings and actions - Adjust SQL schema unique constraint to handle nullable `max_kmh` values